--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
 body {
     padding: 0;
@@ -8,17 +9,84 @@ body {
     overflow-x: hidden;
 }
 
-nav ul {
+.container {
+    background-color: #e5e5e5;
+}
+
+.mobile-navbar {
+    width: 100%;
+}
+
+.mobile-navbar ul {
     list-style: none;
     padding: 5%;
     margin: 0;
+    background-color: white;
     display: flex;
     justify-content: space-between;
 }
 
-#my-logo {
+.mobile-navbar #my-logo {
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
     font-size: 18px;
     color: #6070ff;
+}
+
+.first-section {
+    width: 100%;
+    height: 100%;
+    background: url(img/header-mobile.png) no-repeat, #fff;
+    background-size: 100%;
+    border-bottom-left-radius: 16%;
+    background-clip: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.first-section h1 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+    color: #172b4d;
+    width: 70%;
+    padding: 5%;
+    margin-top: 20%;
+    line-height: 100%;
+}
+
+#h1-supporting-para {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    width: 86%;
+    padding: 5%;
+    margin-top: -12%;
+}
+
+#first-section-button {
+    background-color: transparent;
+    border: none;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: #7f8cff;
+    padding: 5%;
+}
+
+.first-section-links {
+    list-style: none;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    padding: 5%;
+    margin-bottom: 14%;
+    width: 50%;
+    justify-content: space-between;
+}
+
+.first-section-links img {
+    width: 120%;
+    height: 10%;
 }
