--- a/style.css
+++ b/style.css
@@ -192,7 +192,16 @@ body {
 }
 
 .third-section {
+    height: 100%;
+    width: 100%;
+    background-color: #fff;
+    border-top-right-radius: 16%;
+}
 
+.about-me {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 h3 {
@@ -204,6 +213,7 @@ h3 {
     color: #172b4d;
     width: 65%;
     padding: 5%;
+    margin-top: 25%;
     margin-bottom: -10%;
 }
 
@@ -217,4 +227,94 @@ h3 {
     padding: 5%;
     margin-bottom: -6%;
     width: 90%;
+}
+
+.button {
+    padding: 5%;
+    margin-top: -15%;
+}
+
+#gmr {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 24px;
+    color: #396df2;
+    background-color: transparent;
+    padding: 10%;
+    border: 1px solid #6070ff;
+    box-sizing: border-box;
+    border-radius: 8px;
+    width: 120%;
+    white-space: nowrap;
+}
+
+.lfs {
+    padding: 10%;
+}
+
+.languages,
+.frameworks,
+.skills {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.title {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.title h4 {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    margin-right: auto;
+}
+
+.title img {
+    width: 4%;
+    height: 4%;
+}
+
+.languages ul,
+.frameworks ul,
+.skills ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    width: 100%;
+    height: 100%;
+}
+
+.languages li,
+.frameworks li,
+.skills li {
+    display: flex;
+    align-items: center;
+    background-color: #f7f7f9;
+    border-radius: 8px;
+    margin-bottom: 5%;
+    padding: 2%;
+}
+.languages li p,
+.frameworks li p,
+.skills li p {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 20px;
+    margin-left: 4%;
+}
+
+.frameworks,
+.skills {
+    border-bottom: 1px solid #dfe1e6;
 }
