--- a/style.css
+++ b/style.css
@@ -318,3 +318,87 @@ h3 {
 .skills {
     border-bottom: 1px solid #dfe1e6;
 }
+
+.fourth-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background: url(img/contact-mobile.svg) no-repeat, #6070ff;
+    background-size: 100%;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 10%;
+}
+
+.fourth-section h5 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 52px;
+    color: #fff;
+    margin-top: 40%;
+}
+
+.fourth-section p {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    color: #fff;
+    width: 83%;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    row-gap: 10%;
+}
+
+form input,
+form textarea {
+    width: 80%;
+    border: 1px solid #cfd8dc;
+    border-radius: 8px;
+    padding: 5%;
+    margin-bottom: 5%;
+}
+
+form input::placeholder {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 20px;
+}
+
+form textarea::placeholder {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 24px;
+    color: #b3bac5;
+}
+
+
+form button {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 24px;
+    color: #6070ff;
+    background-color: #fff;
+    border-radius: 8px;
+    border: none;
+    padding: 2% 4%;
+    margin-bottom: 5%;
+    margin-left: -54%;
+}
